--- a/npcs/thane_gravelfist.yaml
+++ b/npcs/thane_gravelfist.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -463,37 +463,55 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
+    saving-throws:
+    - Strength
+    - Charisma
+    damage-immunities:
+    - N/a
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
+    skills:
+    - Brewing
+    proficiencies:
+    - Insight
+    - Perception
+    - Gaming Kit    
+    - Brewer's Supplies
+  special-abilities: 
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content:
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10 + 
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+  - title: Champion Abilities
+  - abilities: 
+    - title: Improved Critical
+    - content: Your weapon attacks score a critical hit on a roll of 19 or 20
 
-    - Dwarf Abilities:
-       - Darkvision: Accustomed to life underground, you have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You
-                     can't discern color in darkness, only shades of gray
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
-       - Tool Proficiency: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus
-       - Dwarven Toughness: Your hit point maximum increases by 1, and it increases by 1 every time you gain a level
-                            
-    - Fighter Abilities:
-         - Fighting Style: Defense
-         - Second Wind: Bonus Action to regain 1d10 + 5
-         - Action Surge: Once every short/long rest can take an extra action
-         - Extra Attack: Can attack twice each turn
-       
-    - Champion Abilities:
-       - Improved Critical: your weapon attacks score a critical hit on a roll of 19 or 20
-       
-    special-abilities:
-       - Proficiencies: Insight, Perception, Brewer's Supplies, Gaming Kit
-       - Feats: N/A
-       
-    attacks: |
-      2 attacks with longsword
-    combat-tactics: |
-      Thane takes combat head on and will typically aim for the strongest foe first.
-    special-equipment:
-    - Thane wears a glove on his right hand that upon touching a plate or tankard or the like magically enhances the flavor of any consumable on or in the item.
+  - title: Attacks
+  - content: 2 attacks with longsword
+  - title: Combat Tactics
+  - content: Thane takes combat head on and will typically aim for the strongest foe first.
     
     
   profile:
