--- a/npcs/the_carnelian_shroud.yaml
+++ b/npcs/the_carnelian_shroud.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -334,6 +334,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: the_red_carnelian_s_gang
       name: The Red Carnelian's Gang
     - id: the_orphanage
@@ -468,38 +469,76 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
+    saving-throws:
+    - Charisma
+    - Intelligence
+    damage-immunities:
+    - Necrotic
+    condition-immunities:
+    - Frightened, Charmed, Poisoned, Stunned
+    resistances:
+    - Fire, Poison, Cold, Lightning
+    skills:
+    - Leatherworking
+    proficiencies:
+    - Insight
+    - Perception
+    - Deception    
+    - Stealth
+    - Persuasion
+    - Gaming Set
+    - Disguise Kit
+    - Forgery Kit
+    - Finesse Weapons
+  special-abilities: 
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+    - title: Reliable Talent
+    - content: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
+  - title: Mastermind Abilities
+  - abilities: 
+    - title: Master of Intrigue
+    - content: You gain proficiency with the disguise kit, the forgery kit, and one gaming set of your choice. You also learn two languages of your choice. Additionally, you can unerringly mimic the speech patterns
+               and accent of a creature that you hear speak for at least 1 minute, enabling you to pass yourself off as a native speaker of a particular land, provided that you know the language
+    - title: Master of Tactics
+    - content: You can use the Help action as a bonus action. Additionally, when you use the Help action to aid an ally in attacking a creature, the target of that attack can be within 30 feet of you, rather than
+               5 feet of you, if the target can see or hear you
+    - title: Insightful Manipulators
+    - content: If you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if
+               the creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice; Intelligence score, Wisdom score, Charisma score, Class levels (if any)
+               At the DM's option, you might also realize you know a piece of the creature's history or one of its personality traits, if it has any.
 
-    - Rogue Abilities:
-       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-       - Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-       - Reliable Talent: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
-                            
-    - Mastermind Abilities:
-         - Master of Intrigue: you gain proficiency with the disguise kit, the forgery kit, and one gaming set of your choice. You also learn two languages of your choice. Additionally, you can unerringly mimic the speech
-                               patterns and accent of a creature that you hear speak for at least 1 minute, enabling you to pass yourself off as a native speaker of a particular land, provided that you know the language.
-         - Master of Tactics: you can use the Help action as a bonus action. Additionally, when you use the Help action to aid an ally in attacking a creature, the target of that attack can be within 30 feet of you, rather than
-                              5 feet of you, if the target can see or hear you
-         - Insightful Manipulator: if you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if
-                                   the creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice - Intelligence score, Wisdom score, Charisma score, Class levels (if any)
-                                   At the DM's option, you might also realize you know a piece of the creature's history or one of its personality traits, if it has any
+  - title: Feats
+  - content: Mounted Combatant, Mount Master, Crossbow Expert, Sharpshooter, Actor
        
-    special-abilities:
-       - Proficiencies: Insight, Perception, Deception, Stealth, Gaming Set, Disguise Kit, Forgery Kit, Finesse Weapons 
-       - Feats: Mounted Combatant, Mount Master, Crossbow Expert, Sharpshooter, Actor
-       
-    attacks: |
-      2 attacks with rapier or hand crossbow
-    combat-tactics: |
-      Always tries to keep as much distance as possible and use her crossbow as not to give away her identity, But if necessary, she's pretty damn good with that blade too
-    special-equipment:
-    - Vicious Rapier
-    - Vicious Hand Crossbow
-    - Wand of Polymorph
-    - Cape of Billowing
+  - title: Attacks
+  - content: 2 attacks with rapier or hand crossbow
+  - title: Combat Tactics
+  - content: Always tries to keep as much distance as possible and use her crossbow as not to give away her identity, But if necessary, she's pretty damn good with that blade too
+
+  - title: Special Equipment
+  - abilities:
+    - title: Vicious Rapier
+    - content: When you roll a 20 with this Magic Weapon, the target takes an extra 2d6 piercing damage.
+    - title: Vicious Hand Crossbow
+    - content: When you roll a 20 with this Magic Weapon, the target takes an extra 2d6 piercing damage.
+    - title: Wand of Polymorph
+    - content: This wand has 7 Charges. While holding it, you can use an action to expend 1 of its Charges to cast the Polymorph spell (save DC 15) from it. The wand regains 1d6 + 1 expended Charges daily at dawn. If you expend 
+               the wand's last charge, roll a d20. On a 1, the wand crumbles into ashes and is destroyed. 
+    - title: Cape of Billowing
+    - content: While wearing this cloak, you can use a bonus action to make it billow dramatically
+    - title: Hat of Disguise
+    - content: While wearing this hat, you can use an action to cast the Disguise Self spell from it at will. The spell ends if the hat is removed.
     
     
   profile:
